<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nombre_hint" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edad_hint"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/chkTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_terminos_text" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sw_recordar_text" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrar_text" />

    <Button
        android:id="@+id/btnVerPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ver_perfil_text" />

</LinearLayout>
